@@ -1,3 +1,12 @@
+2006-12-29  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_context.c: keep reference of Ruby
+	object for the surface in the context.
+
+	* packages/cairo/ext/rb_cairo_surface.c:
+	- use file output functions provided by cairo.
+	- hold output target reference in surface.
+
 2006-12-28  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo.c (Cairo::BINDINGS_VERSION):
